--- a/package.json
+++ b/package.json
@@ -8,28 +8,33 @@
     "dev": "nodemon server.js",
     "test": "jest"
   },
-  "keywords": ["vehicle", "repossession", "management", "api"],
+  "keywords": [
+    "vehicle",
+    "repossession",
+    "management",
+    "api"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "helmet": "^7.0.0",
     "express-validator": "^7.0.1",
-    "xlsx": "^0.18.5",
-    "nodemailer": "^6.9.4",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "mongoose": "^7.5.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1"
   }
-} 
+}
