admin correct payment

--- a/.env
+++ b/.env
@@ -3,9 +3,8 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Configuration
-# MONGODB_URI=mongodb+srv://aadouble96:AuHhiWU95wirSx7X@repodb.5epjwo3.mongodb.net/repo_app?retryWrites=true&w=majority&appName=repodb
 
-MONGODB_URI=mongodb://localhost:27017/repo_app
+MONGODB_URI=mongodb://localhost:27017/mukesh
 # JWT Configuration
 JWT_SECRET=repo-app-super-secret-jwt-key-2024-change-this-in-production
 JWT_EXPIRE=7d
@@ -27,6 +26,8 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
+
+
 
 # Application Settings
 APP_NAME=Repo App
