--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/multer": "^2.0.0",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1"
   }
