--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.5.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "jspdf": "^2.5.1",
@@ -23,6 +24,7 @@
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
     "recharts": "^2.8.0",
+    "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
