done with app also

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 
 MONGODB_URI=mongodb://localhost:27017/mukesh
 # JWT Configuration
-JWT_SECRET=repo-app-super-secret-jwt-key-2024-change-this-in-production
+JWT_SECRET=repo-app-super-secret-jwt-key-2024-change-thicd s-in-production
 JWT_EXPIRE=7d
 JWT_COOKIE_EXPIRE=7
 
