--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-rate-limit": "^6.10.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
@@ -33,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "node-geocoder": "^4.4.1",
     "nodemailer": "^6.9.4",
+    "puppeteer": "^24.17.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
